--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,9 @@
 version: "3"
 services:
+  nginx:
+    ports: 
+      - "3000:80"
+
   dockerop:
     build:
       context: .
@@ -12,6 +16,7 @@ services:
       - NODE_ENV=development
       - MONGO_USER=eluo28
       - MONGO_PASSWORD=test
+      - SESSION_SECRET=secret
     command: npm run dev
   mongo:
     environment:
