--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: "3"
 services:
+  nginx:
+    image: nginx:stable-alpine
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
   dockerop:
     build: .
-    ports:
-      - "3000:3000"
     env_file:
       - ./.env
     depends_on:
@@ -16,6 +18,9 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=test
     volumes:
       - mongo-db:/data/db
+
+  redis:
+    image: redis
 
 volumes:
   mongo-db:
