--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
   dockerop:
     build: .
+    image: eluo28/dockerops
     env_file:
       - ./.env
     depends_on:
